--- a/123.html
+++ b/123.html
@@ -1,4 +1,6 @@
 <script>
-var a = prompt("Введите что-нибудь");
-alert("a");
+var a = prompt("Введите a");
+var b = prompt("Введите b");
+alert(a);
+alert(b);
 </script>
