--- a/123.html
+++ b/123.html
@@ -1,8 +1,8 @@
 <script>
 var a = prompt("Введите a");
-var b = prompt("Введите b");
+var d = prompt("Введите d");
 var c = prompt("Введите c");
 alert(a);
-alert(b);
+alert(d);
 alert(c);
 </script>
