--- a/123.html
+++ b/123.html
@@ -1,8 +1,8 @@
 <script>
 var a = prompt("Введите a");
 var d = prompt("Введите d");
-var c = prompt("Введите c");
+var t = prompt("Введите t");
 alert(a);
 alert(d);
-alert(c);
+alert(t);
 </script>
