--- a/index.html
+++ b/index.html
@@ -1,90 +1,22 @@
+<!DOCTYPE HTML>
 <html>
 <head>
-<meta charset="utf-8">
-<title>dd</title>
+	<link rel="stylesheet" href="index.css">
+	<meta charset="utf-8">
+	<title>11</title>
+	<script src="jquery-1.7.2.min.js"></script>
+	<script src="index.js"></script>
 </head>
-<style>
-body{
- 
- margin:0;
-}
-.button{
- margin-left:600px;
- margin-top:15px;
-}
-.form{
- margin-left:600px;
- margin-top:15px;
- width:100px;
- text-align:left;
-}
-</style>
 <body>
-<input class="button" type="submit" value="Year" onclick="a()" onclick="Refresh()">
-<input class="form" id="info1">
-<input class="button" type="submit" value="Month" onclick="b()">
-<input class="form" id="info2">
-<input class="button" type="submit" value="Day" onclick="c()">
-<input class="form" id="info3">
-<input class="button" type="submit" value="Hours" onclick="d()">
-<input class="form" id="info4">
-<input class="button" type="submit" value="Minutes" onclick="e()">
-<input class="form" id="info5">
-<input class="button" type="submit" value="Seconds" onclick="f()">
-<input class="form" id="info6">
+<div id="header" style="padding-top:80px"></div>
+<div class="slider" style="background:#0263b2">
+	<div class="slider-content">
+		<div class="slide"><div style="width:640px; height:250px;"><h4><a href="#">Получите доступ ко всем услугам на портале</a><p><a href="#">Клиенты Тинькофф-банка и Почта-банка могут подтвердить учетную запись через интернет — так быстрее.</a></h4></div></div>
+		<div class="slide"><div style="width:640px; height:250px;"><h4><a href="#">Проверьте долги по налогам</a><p><a href="#">Это легко сделать на Госуслугах без визита в инспекцию. Узнайте, нет ли долга и пеней, и погасите их онлайн на портале.</a></h4></div></div>
+		<div class="slide"><div style="width:640px; height:250px;"><h4><a href="#">Госпошлина со скидкой 30%</a><p><a href="#">Оплачивайте госпошлины на портале и экономьте. Скидка рассчитается автоматически, а квитанция появится в ленте уведомлений.</a></h4></div></div>
+		<div class="slide"><div style="width:640px; height:250px;"><h4><a href="#">3 декабря — последний день уплаты налогов</a><p><a href="#">Успейте заплатить налоги за 2017 год, чтобы не получить задолженность</a></h4></div></div>
+	</div>
+</div>
+<div id="footer" style="padding-top:340px"></div>
 </body>
-<script>
-Data = new Date();
-Year = Data.getFullYear();
-Month = Data.getMonth();
-Hour = Data.getHours();
-Minutes = Data.getMinutes();
-Seconds = Data.getSeconds();
-switch (Month)
-{
-  case 0: fMonth="Январь"; break;
-  case 1: fMonth="Февраль"; break;
-  case 2: fMonth="Март"; break;
-  case 3: fMonth="Апрель"; break;
-  case 4: fMonth="Май"; break;
-  case 5: fMonth="Июнь"; break;
-  case 6: fMonth="Июль"; break;
-  case 7: fMonth="Август"; break;
-  case 8: fMonth="Сентябрь"; break;
-  case 9: fMonth="Октябрь"; break;
-  case 10: fMonth="Ноябрь"; break;
-  case 11: fMonth="Декабрь"; break;
-}
-Day = Data.getDate();
-var aa = document.getElementById('info1');
-function a(){
-    aa.value = Year;
-}
-
-var bb = document.getElementById('info2');
-function b(){
-    bb.value = fMonth;
-	}
-
-var cc = document.getElementById('info3');
-function c(){
-    cc.value = Day;
-}
-
-var dd = document.getElementById('info4');
-function d(){
-    dd.value = Hour;
-}
-
-var ee = document.getElementById('info5');
-function e(){
-    ee.value = Minutes;
-}
-
-var ff = document.getElementById('info6');
-function f(){
-    ff.value = Seconds;
-}
-
-</script>
 </html>
